--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -46,29 +46,40 @@
   let nomTwo = '';
   const $operator = document.querySelector('#operator');
   const $result = document.querySelector('#result');
-  const onClickNumber = (number) =>  () => {
+
+  const onClickNumber = (event) => {
     if(operator){
-      nomTwo += number;
+      nomTwo += event.target.textContent;
     }
     else {
-      nomOne += number;
+      nomOne += event.target.textContent;
     }
-    $result.value += number;
-  };
-  document.querySelector('#num-0').addEventListener('click', onClickNumber('0')); 
-  document.querySelector('#num-1').addEventListener('click', onClickNumber('1')); 
-  document.querySelector('#num-2').addEventListener('click', onClickNumber('2')); 
-  document.querySelector('#num-3').addEventListener('click', onClickNumber('3')); 
-  document.querySelector('#num-4').addEventListener('click', onClickNumber('4')); 
-  document.querySelector('#num-5').addEventListener('click', onClickNumber('5')); 
-  document.querySelector('#num-6').addEventListener('click', onClickNumber('6')); 
-  document.querySelector('#num-7').addEventListener('click', onClickNumber('7')); 
-  document.querySelector('#num-8').addEventListener('click', onClickNumber('8')); 
-  document.querySelector('#num-9').addEventListener('click', onClickNumber('9')); 
-  document.querySelector('#plus').addEventListener('click', ()=>{}); 
-  document.querySelector('#minus').addEventListener('click', ()=>{}); 
-  document.querySelector('#divide').addEventListener('click', ()=>{}); 
-  document.querySelector('#multipy').addEventListener('click', ()=>{}); 
+    $result.value += event.target.textContent;
+  }; // event 객체
+  document.querySelector('#num-0').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-1').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-2').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-3').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-4').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-5').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-6').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-7').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-8').addEventListener('click', onClickNumber); 
+  document.querySelector('#num-9').addEventListener('click', onClickNumber); 
+
+  const onClickOperator = (op) => () => {
+    if(op){
+      operator = op;
+      $operator.value = operator
+    }
+    else {
+      alert('숫자를 먼저 입력하세요');
+    }
+  }; // 고차합수
+  document.querySelector('#plus').addEventListener('click', onClickOperator('+')); 
+  document.querySelector('#minus').addEventListener('click', onClickOperator('-')); 
+  document.querySelector('#divide').addEventListener('click', onClickOperator('/')); 
+  document.querySelector('#multipy').addEventListener('click', onClickOperator('x')); 
   document.querySelector('#calculate').addEventListener('click', ()=>{}); 
   document.querySelector('#clear').addEventListener('click', ()=>{}); 
 </script>  
