--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -48,17 +48,18 @@
   const $result = document.querySelector('#result');
 
   const onClickNumber = (event) => {
-    if(operator){
-      if(!numTwo){
-        $result.value = '';
-      }
-      numTwo += event.target.textContent;
-    }
-    else {
-      numOne += event.target.textContent;
-    }
+  if(!operator){
+    numOne += event.target.textContent;
     $result.value += event.target.textContent;
-  }; // event 객체
+    return;
+  }
+
+  if(!numTwo){
+    $result.value = '';
+  }
+  numTwo += event.target.textContent;
+  $result.value += event.target.textContent;
+}; // event 객체 
   document.querySelector('#num-0').addEventListener('click', onClickNumber); 
   document.querySelector('#num-1').addEventListener('click', onClickNumber); 
   document.querySelector('#num-2').addEventListener('click', onClickNumber); 
@@ -83,7 +84,29 @@
   document.querySelector('#minus').addEventListener('click', onClickOperator('-')); 
   document.querySelector('#divide').addEventListener('click', onClickOperator('/')); 
   document.querySelector('#multipy').addEventListener('click', onClickOperator('x')); 
-  document.querySelector('#calculate').addEventListener('click', ()=>{}); 
+  document.querySelector('#calculate').addEventListener('click', ()=>{
+    if(numTwo){
+      switch(operator){
+        case '+':
+          $result.value = parseInt(numOne) + parseInt(numTwo);
+          break;
+        case '-':
+          $result.value = numOne - numTwo;
+          break;
+        case '*':
+          $result.value = numOne * numTwo;
+          break;
+        case '/':
+          $result.value = numOne / numTwo;
+          break;
+        default:
+          break;
+      }
+    }
+    else {
+      alert('숫자를 먼저 입력해주세요');
+    }
+  }); 
   document.querySelector('#clear').addEventListener('click', ()=>{}); 
 </script>  
 </body>
