--- a/ lotto/lotto.html
+++ b/ lotto/lotto.html
@@ -23,6 +23,14 @@
 <div id = "bonus"> 보너스 : </div>
 <script>
   const candidate = Array(45).fill().map((v, i) => i + 1);
+  const shuffle = [];
+  while (candidate.length > 0){
+    const random = Math.floor(Math.random() * candidate.length); // 무작위 인덱스 뽑기
+    const spliceArray = candidate.splice(random, 1); //return값으로 splice에 의해 제거된 배열이 반환됨
+    const value = spliceArray[0];
+    shuffle.push(value);
+  }
+  console.log(shuffle);
 
 </script>
 </body>
