--- a/ lotto/lotto.html
+++ b/ lotto/lotto.html
@@ -19,7 +19,7 @@
   </style>
 </head>
 <body>
-<div id = "result">추첨 결과는?</div>
+<div id = "result"> 추첨 결과는? </div>
 <div id = "bonus"> 보너스 : </div>
 <script>
   const candidate = Array(45).fill().map((v, i) => i + 1);
@@ -34,6 +34,28 @@
   const winBalls = shuffle.slice(0, 6).sort((a,b) => a-b ); // 순서대로 정렬
   const bonus = shuffle[6];
   console.log(winBalls, bonus);
+
+  const $result = document.querySelector('#result');
+  const $bonus = document.querySelector('#bonus');
+
+  const showBall = (number, $target) => {
+    const $ball = document.createElement('div');
+    $ball.className = 'ball';
+    $ball.textContent = number;
+    $target.appendChild($ball);
+  }
+
+  for(let i = 0; i<winBalls.length; i++){
+    setTimeout(() => {
+      showBall(winBalls[i], $result);
+    }, (i+1) * 1000); // 1000 = 1초
+  }
+
+  setTimeout(() => {
+    showBall(bonus, $bonus);
+  }, 7 * 1000); // 1000 = 1초
+
+
 </script>
 </body>
 </html>
