--- a/ lotto/lotto.html
+++ b/ lotto/lotto.html
@@ -42,7 +42,29 @@
     const $ball = document.createElement('div');
     $ball.className = 'ball';
     $ball.textContent = number;
+    setColor(number, $ball);
     $target.appendChild($ball);
+  }
+
+  const setColor = (number, $ball) => {
+    if(number < 10){
+      $ball.style.backgroundColor = 'red';
+      $ball.style.color = 'white';
+    }
+    else if(number < 20){
+      $ball.style.backgroundColor = 'orange';
+    }
+    else if(number < 30){
+      $ball.style.backgroundColor = 'yellow';
+    }
+    else if(number < 40){
+      $ball.style.backgroundColor = 'blue';
+      $ball.style.color = 'white';
+    }
+    else {
+      $ball.style.backgroundColor = 'green';
+      $ball.style.color = 'white';
+    }
   }
 
   /* let 사용 */
