--- a/response-check/response-check.html
+++ b/response-check/response-check.html
@@ -33,12 +33,14 @@
 
   let startTime;
   let endTime;
+  let timeoutId;
   const records = [];
   $screen.addEventListener('click', (event) => {
     if(event.target.classList.contains('waiting')){ // 파랑색
       $screen.classList.remove('waiting');
       $screen.classList.add('ready');
-      setTimeout(function(){
+      $screen.textContent = '초록색이 되면 클릭하세요';
+      timeoutId = setTimeout(function(){
         startTime = new Date();
         $screen.classList.remove('ready');
         $screen.classList.add('now');
@@ -46,7 +48,10 @@
       }, Math.floor(Math.random() * 1000) + 2000); // 2초~3초 사이, 2000 ~ 3000 사이 수
     }
     else if (event.target.classList.contains('ready')){ // 빨강색
-
+      clearTimeout(timeoutId);
+      $screen.classList.remove('ready');
+      $screen.classList.add('waiting');
+      $screen.textContent = "너무 성급하시군요";
     }else if (event.target.classList.contains('now')){ // 초록색
       endTime = new Date();
       const current = endTime - startTime;
