--- a/tictactoe/tictactoe.html
+++ b/tictactoe/tictactoe.html
@@ -36,17 +36,8 @@
 
     // 승부확인
     const checkWinner = (target) => {
-      let rowIndex;
-      let cellIndex;
-      rows.forEach((row, ri) => {
-        row.forEach((cell, ci) => {
-          if(cell === target){
-            rowIndex = ri;
-            cellIndex = ci;
-          }
-        });
-      });
-
+      let rowIndex = target.parentNode.rowIndex;
+      let cellIndex = target.cellIndex;
       let hasWinner = false;
       // 가로줄 검사
       if (
@@ -84,19 +75,6 @@
       return hasWinner;
     };
 
-    // 무승부 확인
-    const checkGaneEnd = () => {
-      let draw = true;
-      rows.forEach((row) => {
-        row.forEach((cell) => {
-          if(!cell.textContent){
-            draw = false;
-          }
-        })
-      });
-      return draw;
-    }
-
     const callback = (event) => {
       // 현재 칸에 글자가 있는지 확인
       if(event.target.textContent) {
@@ -106,14 +84,16 @@
       console.log('빈 칸 입니다.');
       event.target.textContent = turn;
       // 승부 확인
-      if (checkWinner(event.target)){
+      const hasWinner = checkWinner(event.target);
+      if (hasWinner){
         $result.textContent = `${turn} 의 승리!`;
         $table.removeEventListener('click', callback);
         return;
       }
       // 무승부 확인
-      if(checkGaneEnd()){
-        $result.textContent = `무승부!`;
+      const draw = rows.flat().every((cell) => cell.textContent);
+      if(draw){
+        $result.textContent = '무승부';
         return;
       }
       // 삼항연산자
