--- a/textRPG/text-rpg.html
+++ b/textRPG/text-rpg.html
@@ -40,6 +40,22 @@
   </div>
 </div>
 <script>
+  const $startScreen = document.querySelector('#start-screen');
+  const $gameMehu = document.querySelector('#game-menu');
+  const $battleMenu = document.querySelector('battle-menu');
+  const $heroName = document.querySelector('#hero-name');
+  const $heroLevel = document.querySelector('#hero-level');
+  const $heroHp = document.querySelector('#hero-hp');
+  const $heroXp = document.querySelector('#hero-xp');
+  const $heroAtt = document.querySelector('hero-att');
+
+  $startScreen.addEventListener('submit',(event) => {
+    event.preventDefault(); // submit과 동시에 창이 재실행되는것을 막음
+    let name = event.target['name-input'].value; // const 로 설정할 경우 함수가 끝나면 사라진다. 잠깐 저장할때 사용한다.
+    $startScreen.style.display = 'none';
+    $gameMehu.style.display = 'block';
+    $heroName.textContent = name;
+  });
 
 </script>
 </body>
