--- a/textRPG/text-rpg.html
+++ b/textRPG/text-rpg.html
@@ -13,7 +13,7 @@
 <div id = "screen">
   <div id = "hero-stat">
     <span id = "hero-name"></span>
-    <span id = "hero-revel"></span>
+    <span id = "hero-level"></span>
     <span id = "hero-hp"></span>
     <span id = "hero-xp"></span>
     <span id = "hero-att"></span>
@@ -41,22 +41,82 @@
 </div>
 <script>
   const $startScreen = document.querySelector('#start-screen');
-  const $gameMehu = document.querySelector('#game-menu');
+  const $gameMenu = document.querySelector('#game-menu');
   const $battleMenu = document.querySelector('battle-menu');
   const $heroName = document.querySelector('#hero-name');
   const $heroLevel = document.querySelector('#hero-level');
   const $heroHp = document.querySelector('#hero-hp');
   const $heroXp = document.querySelector('#hero-xp');
-  const $heroAtt = document.querySelector('hero-att');
+  const $heroAtt = document.querySelector('#hero-att');
+  const $monsterName = document.querySelector('#monster-name');
+  const $monsterHp = document.querySelector('#monster-hp');
+  const $monsterAtt = document.querySelector('#monster-att');
+  const $message = document.querySelector('#message');
+
+  const hero = {
+    name : '',
+    lev : 1,
+    maxHp : 100,
+    hp : 100,
+    xp : 0,
+    att : 10,
+  };
+
+  let monster = null;
+
+  const monsterList = [
+    { name: '슬라임', hp: 25, att: 10, xp: 10},
+    { name: '스켈레톤', hp: 50, att: 15, xp: 20},
+    { name: '마왕', hp: 150, att: 35, xp: 50},
+  ];
 
   $startScreen.addEventListener('submit',(event) => {
     event.preventDefault(); // submit과 동시에 창이 재실행되는것을 막음
-    let name = event.target['name-input'].value; // const 로 설정할 경우 함수가 끝나면 사라진다. 잠깐 저장할때 사용한다.
+    const name = event.target['name-input'].value; // const 로 설정할 경우 함수가 끝나면 사라진다. 잠깐 저장할때 사용한다.
     $startScreen.style.display = 'none';
     $gameMehu.style.display = 'block';
     $heroName.textContent = name;
+    $heroLevel.textContent = `${hero.lev} Lev`;
+    $heroHp.textContent = `HP : ${hero.hp}/${hero.maxHp}`;
+    $heroXp.textContent = `XP : ${hero.xp}/${15 * hero.lev}`;
+    $heroAtt.textContent = `ATT : ${hero.att}`;
+    hero.name = name;
   });
 
+  $gameMenu.addEventListener('submit', (event) => {
+    event.preventDeault();
+    const input = event.target['menu-input'].value;
+    if(input === '1') {
+      $gameMenu.style.display = 'none';
+      $battleMenu.style.display = 'block';
+      monster = JSON.parse(
+        JSON.stringify(monsterList[Math.floor(Math.random() * monsterList.length)])
+      );
+      monster.maxHp = monster.hp;
+      $monsterName.textContent = monster.name;
+      $monsterHp.textContent = `HP : ${monster.hp}/${monster.maxHp}`;
+      $monsterAtt.textContent = `ATT : ${monster.att}`;
+    }
+    else if (input === '2'){
+
+    }
+    else if (input === '3'){
+
+    }
+  });
+
+  $battleMenu.addEventListener('submit', (event) => {
+    const input = event.target['battle-input'].value;
+    if(input === '1'){
+
+    }
+    else if (input === '2'){
+
+    }
+    else if (input === '3'){
+      
+    }
+  });
 </script>
 </body>
 </html>
