--- a/textRPG/text-rpg-class.html
+++ b/textRPG/text-rpg-class.html
@@ -69,7 +69,7 @@
       $battleMenu.addEventListener('submit', this.onBattleMenuInput);
       this.changeScreen('game');
     }
-    changeScreen(screen){
+    changeScreen = (screen) => {
       if(screen === 'start'){
         $startScreen.style.display = 'block';
         $gameMenu.style.display = 'none';
@@ -86,7 +86,7 @@
         $battleMenu.style.display = 'block';
       }
     }
-    onGameMenuInput(event){
+    onGameMenuInput = (event) => {
       event.preventDefault();
       const input = event.target['menu-input'].value;
       // 모험
@@ -102,7 +102,7 @@
 
       }
     }
-    onBattleMenuInput(event){
+    onBattleMenuInput = (event) => {
       event.preventDefault();
       const input = event.target['battle-input'].value;
       // 공격
@@ -115,7 +115,7 @@
       }
       // 도망
       else if (input === '3'){
-        
+        this.changeScreen('game');
       }
     }
   }
