--- a/textRPG/text-rpg-class.html
+++ b/textRPG/text-rpg-class.html
@@ -94,6 +94,17 @@
       // 모험
       if(input === '1'){
         this.changeScreen('battle');
+        const randomIndex = Math.floor(Math.random() * this.monsterList.length);
+        const randomMonster = this.monsterList[randomIndex];
+        this.monster = new Monster(
+          this,
+          randomMonster.name,
+          randomMonster.hp,
+          randomMonster.att,
+          randomMonster.xp,
+        );
+        this.updateMonsterStat();
+        this.showMessage(`몬스터와 마주쳤다. ${this.monster.name}인 것 같다!`);
       }
       // 휴식
       else if (input === '2'){
@@ -109,7 +120,12 @@
       const input = event.target['battle-input'].value;
       // 공격
       if(input === '1'){
-
+        const {hero, monster} = this;
+        hero.attack(monster);
+        monster.attack(herp);
+        this.showMessage(`${hero.att}의 데미지를 주고, ${monster.att}의 데미지를 받았다.1`);
+        this.updateHeroStat();
+        this.updateMonsterStat();
       }
       // 회복
       else if (input === '2'){
@@ -148,6 +164,24 @@
       $heroXp.textContent = `${hero.xp}/${15 * hero.lev}`;
       $heroAtt.textContent = `ATT : ${hero.att}`;
     }
+
+    updateMonsterStat() {
+      const {monster} = this;
+      if(monster === null){
+        $monsterName.textContent = '';
+        $monsterHp.textContent = '';
+        $monsterAtt.textContent = '';
+        return;
+      }
+      $monsterName.textContent = monster.name;
+      $monsterHp.textContent = `${monster.hp}/${monster.maxHp}`;
+      $monsterAtt.textContent = `ATT : ${monster.att}`;
+    }
+
+    showMessage(text) {
+      $message.textContent = text;
+    }
+
   }
 
   class Hero {
