--- a/textRPG/text-rpg-class.html
+++ b/textRPG/text-rpg-class.html
@@ -112,7 +112,7 @@
       }
       // 종료
       else if (input === '3'){
-
+        this.quit();
       }
     }
     onBattleMenuInput = (event) => {
@@ -122,8 +122,22 @@
       if(input === '1'){
         const {hero, monster} = this;
         hero.attack(monster);
-        monster.attack(herp);
-        this.showMessage(`${hero.att}의 데미지를 주고, ${monster.att}의 데미지를 받았다.1`);
+        monster.attack(hero);
+
+        if(hero.xp <= 0){
+          this.showMessage(`${hero.lev} 레벨에서 모험을 종료합니다. 새로운 주인공을 생성해 모험을 떠나세요`);
+          this.quit();
+        }
+        else if (monster.hp <= 0){
+          this.showMessage(`몬스터를 잡아 ${monster.xp} 경험치를 얻었다.`);
+          this.hero.getXp(monster.xp);
+          this.monster = null;
+          this.changeScreen('game');
+        }
+        // 전투 진행중
+        else {
+          this.showMessage(`${hero.att}의 데미지를 주고, ${monster.att}의 데미지를 받았다!`);
+        }
         this.updateHeroStat();
         this.updateMonsterStat();
       }
@@ -182,6 +196,17 @@
       $message.textContent = text;
     }
 
+    // 게임 종료 및 초기화
+    quit(){
+      this.hero = null;
+      this.monster = null;
+      this.updateHeroStat();
+      this.updateMonsterStat();
+      $gameMenu.removeEventListener('submit', this.onGameMenuInput);
+      $battleMenu.removeEventListener('submit', this.onBattleMenuInput);
+      this.changeScreen('start');
+      game = null;
+    }
   }
 
   class Hero {
@@ -200,6 +225,17 @@
     heal(monster){
       this.hp += 20;
       this.hp -= monster.att;
+    }
+    getXp(xp){
+      this.xp += xp;
+      if(this.xp >= this.lev * 15){
+        this.xp -= this.lev * 15;
+        this.lev += 1;
+        this.maxHp += 5;
+        this.att += 5;
+        this.hp = this.maxHp;
+        this.game.showMessage(`레벨업! 레벨 ${this.lev}`);
+      }
     }
   }
 
