--- a/textRPG/text-rpg-class.html
+++ b/textRPG/text-rpg-class.html
@@ -108,10 +108,13 @@
       }
       // 휴식
       else if (input === '2'){
-
+        this.hero.hp = this.hero.maxHp;
+        this.updateHeroStat();
+        this.showMessage('충분한 휴식을 취했다.');
       }
       // 종료
       else if (input === '3'){
+        this.showMessage('');
         this.quit();
       }
     }
@@ -143,11 +146,18 @@
       }
       // 회복
       else if (input === '2'){
-
+        const { hero, monster } = this;
+        hero.hp = Math.min(hero.maxHp, hero.hp + 20);
+        monster.attack(hero);
+        this.showMessage('체력을 조금 회복했다.');
+        this.updateHeroStat();
       }
       // 도망
       else if (input === '3'){
         this.changeScreen('game');
+        this.showMessage('휴, 도망쳤다..!');
+        this.monster = null;
+        this.updateMonsterStat();
       }
     }
 
@@ -211,13 +221,13 @@
 
   class Unit {
     constructor(game, name, hp, att, xp){
-      this.game = gane;
+      this.game = game;
       this.name = name;
       this.hp = hp;
       this.att = att;
       this.xp = xp;
     }
-    attck(target){
+    attack(target){
       target.hp -= this.att;
     }
   }
