--- a/concentration/concentration.html
+++ b/concentration/concentration.html
@@ -7,7 +7,7 @@
   <style>
     .card{
       display: inline-block;
-      margin-left: 20px;
+      margin-right: 20px;
       margin-bottom: 20px;
       width: 70px;
       height: 100px;
@@ -16,14 +16,15 @@
 
     .card-inner{
       position: relative;
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      height: 100%;
       text-align: center;
       transition: transform 0.8s;
+      transform-style: preserve-3d;
     }
 
     .card.flipped .card-inner{
-      transform: rotate(180deg);
+      transform: rotateY(180deg);
     }
 
     .card-front{
@@ -32,20 +33,20 @@
 
     .card-front, .card-back {
       position: absolute;
-      width: 100px;
-      height: 100px;
+      width: 100%;
+      height: 100%;
       border: 1px solid black;
       backface-visibility: hidden;
     }
 
     .card-back {
-      transform: rotate(180deg);
+      transform: rotateY(180deg);
     }
   </style>
 </head>
 <body>
+<div id="wrapper"></div>
 <script>
-
 const $wrapper = document.querySelector('#wrapper');
 
 const total = 12;
@@ -53,12 +54,49 @@ const colors = ['red', 'orange', 'yellow', 'green', 'white', 'pink'];
 let colorCopy = colors.concat(colors); // colors + colors
 let shuffled = [];
 
-function shuffled(){
+function shuffle(){
   for(let i=0; colorCopy.length > 0; i++){
     const randomIndex = Math.floor(Math.random * colorCopy.length);
     shuffled = shuffled.concat(colorCopy.splice(randomIndex, 1));
   }
+}  
+
+function createCard(i){ // div.card > div.card-inner > (div.card-front + div.card-back)
+  const card = document.createElement('div');
+  card.className = 'card'; //.card 태그 생성
+  const cardInner = document.createElement('div');
+  cardInner.className = 'card-inner'; // .card-inner 태그 생성
+  const cardFront = document.createElement('div');
+  cardInner.className = 'card-front'; // card-front 태그 생성
+  const cardBack = document.createElement('div');
+  cardBack.className = 'card-back'; // card-back 태그 생성
+  cardBack.style.backgroundColor = shuffled[i];
+  cardInner.appendChild(cardFront);
+  cardInner.appendChild(cardBack);
+  card.appendChild(cardInner);
+  return card;
 }
+
+function startGame() {
+  shuffle();
+  for(let i = 0; i< total ; i++) {
+    const card = createCard(i);
+    $wrapper.appendChild(card);
+  }
+
+  document.querySelectorAll('.card').forEach((card, index) => {
+    setTimeout(() => {
+      card.classList.add('flipped');
+    }, 1000 + 100 * index);
+  });
+
+  setTimeout(() => {
+    document.querySelectorAll('.card').forEach((card) => {
+      card.classList.remove('flipped');
+    });
+  }, 5000);
+}
+startGame();
 
 </script>
 </body>
