--- a/concentration/concentration.html
+++ b/concentration/concentration.html
@@ -53,6 +53,8 @@ const total = 12;
 const colors = ['red', 'orange', 'yellow', 'green', 'white', 'pink'];
 let colorCopy = colors.concat(colors); // colors + colors
 let shuffled = [];
+let clicked = [];
+let completed = [];
 
 function shuffle(){
   for(let i=0; colorCopy.length > 0; i++){
@@ -67,7 +69,7 @@ function createCard(i){ // div.card > div.card-inner > (div.card-front + div.car
   const cardInner = document.createElement('div');
   cardInner.className = 'card-inner'; // .card-inner 태그 생성
   const cardFront = document.createElement('div');
-  cardInner.className = 'card-front'; // card-front 태그 생성
+  cardFront.className = 'card-front'; // card-front 태그 생성
   const cardBack = document.createElement('div');
   cardBack.className = 'card-back'; // card-back 태그 생성
   cardBack.style.backgroundColor = shuffled[i];
@@ -77,15 +79,36 @@ function createCard(i){ // div.card > div.card-inner > (div.card-front + div.car
   return card;
 }
 
+function onClickCard(){
+  this.classList.toggle('flipped');
+  clicked.push(this);
+  if(clicked.length !== 2){
+    return;
+  }
+  const firstBackColor = clicked[0].querySelector('.card-back').style.backgroundColor;
+  const secondBackColor = clicked[1].querySelector('.card-back').style.backgroundColor;
+  // 두 카드의 뒷면이 같은 경우
+  if(firstBackColor === secondBackColor){
+    completed = completed.concat(clicked);
+    clicked = [];
+    return;
+  }
+  clicked[0].classList.remove('flipped');
+  clicked[1].classList.remove('flipped');
+  clicked = [];
+}
+
 function startGame() {
   shuffle();
   for(let i = 0; i< total ; i++) {
     const card = createCard(i);
+    card.addEventListener('click', onClickCard);
     $wrapper.appendChild(card);
   }
 
   document.querySelectorAll('.card').forEach((card, index) => {
     setTimeout(() => {
+      console.log('dd');
       card.classList.add('flipped');
     }, 1000 + 100 * index);
   });
@@ -96,6 +119,7 @@ function startGame() {
     });
   }, 5000);
 }
+
 startGame();
 
 </script>
