--- a/sweeper/sweeper.html
+++ b/sweeper/sweeper.html
@@ -31,7 +31,7 @@
   const cell = 10;
   const mine = 10;
   const CODE = {
-    NORMAL: -1,
+    NORMAL: -1, // 닫힌칸. 지뢰없음 
     QUESTION: -2,
     FLAG: -3,
     QUESTION_MINE: -4,
@@ -40,6 +40,39 @@
     OPENED: 0, // 0 이상이면 다 모두 열린칸
   }
   let data;
+
+  function plantMine(){
+    const candidate = Array(row * cell).fill().map((arr, i)=> {
+      return i;
+    });
+    const shuffle = [];
+    while(candidate.length > row*cell-mine){
+      const chosen = candidate.splice(Math.floor(Math.random() * candidate.length), 1)[0];
+      shuffle.push(chosen);
+    }
+    // 자료구조를 2차원 배열로 생성
+    const data = [];
+    for(let i=0; i < row; i++){
+      const rowData = [];
+      data.push(rowData);
+      for(let j=0; j<cell; j++){
+        rowData.push(CODE.NORMAL);
+      }
+    }
+    for(let k=0; k < shuffle.length; k++){
+      const ver = Math.floor(shuffle[k] / cell);
+      const hor = shuffle[k] % cell;
+      data[ver][hor] = CODE.MINE;
+    } 
+    return data;
+  }
+
+  function drawTable(){
+
+  }
+
+  drawTable();
+
 </script>
 </body>
 </html>
