--- a/sweeper/sweeper.html
+++ b/sweeper/sweeper.html
@@ -26,7 +26,7 @@
 <div id="result"></div>    
 <script>
   const $tbody = document.querySelector('#table tbody');
-  const $result = document.querySelector('#$result');
+  const $result = document.querySelector('#result');
   const row = 10;
   const cell = 10;
   const mine = 10;
@@ -68,7 +68,18 @@
   }
 
   function drawTable(){
-
+    data = plantMine();
+    data.forEach((row) => {
+      const $tr = document.createElement(`tr`);
+      row.forEach((cell) => {
+        const $td = document.createElement(`td`);
+        if(cell === CODE.MINE){
+          $td.textContent = 'X'; // 개발 편의를 위해 
+        }
+        $tr.append($td);
+      });
+      $tbody.append($tr);
+    })
   }
 
   drawTable();
